# LumaChain

./: .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: ci.yml
api/: .env.example  Dockerfile  package.json  tsconfig.json
api/src/: index.test.ts  index.ts
api/src/lib/: env.ts  errors.ts
api/src/routes/: assets.ts  maintenance.ts  registry.ts  warranty.ts
contracts/: Cargo.toml
contracts/maintenance_log/: Cargo.toml
contracts/maintenance_log/src/: lib.rs
contracts/registry/: Cargo.toml
contracts/registry/src/: lib.rs
contracts/solar_asset/: Cargo.toml
contracts/solar_asset/src/: lib.rs
contracts/warranty/: Cargo.toml
contracts/warranty/src/: lib.rs
scripts/: deploy.sh
sdk/: package.json
sdk/src/: client.ts  index.test.ts  index.ts  qr.ts
sdk/src/contracts/: maintenanceLog.ts  registry.ts  solarAsset.ts  warranty.ts
web/: package-lock.json  package.json
web/.qwen/skills/stellar-freighter-wallet/: SKILL.md
web/src/: App.css  App.tsx  index.css
web/src/components/: Navigation.tsx
web/src/hooks/: useWallet.ts
web/src/pages/: Assets.tsx  Dashboard.tsx  LandingPage.tsx  Maintenance.tsx  Warranty.tsx
