[workspace]
resolver = "2"
members = [
    "solar_asset",
    "registry",
    "warranty",
    "maintenance_log"
]

[workspace.dependencies]
soroban-sdk = { version = "25" }

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[profile.release-with-logs]
inherits = "release"
debug-assertions = true
